--- a/.env
+++ b/.env
@@ -1,4 +1,17 @@
-EBMS_BASE_URL=https://ebms.obr.gov.bi:9443/ebms_api
-EBMS_BEARER_TOKEN=your-ebms-bearer-token
-DATABASE_URL=postgresql://aenzbi_user:password@db:5432/aenzbi_db
-PORT=3000
+DB_HOST=postgres
+DB_PORT=5432
+DB_USER=admin
+DB_PASSWORD=password
+DB_NAME=aenzbi_suite
+REDIS_HOST=redis
+REDIS_PORT=6379
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USER=your-email@example.com
+SMTP_PASS=your-password
+AWS_REGION=your-aws-region
+AWS_ACCESS_KEY_ID=your-access-key
+AWS_SECRET_ACCESS_KEY=your-secret-key
+S3_BUCKET_NAME=your-bucket-name
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
